# solana-distribute

./: Cargo.toml  mainnet_address
src/: entrypoint.rs  processor.rs
