[package]
name = "counter-solana-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh = "0.9.3"
rand_chacha = "0.3.1"
rand = "0.8.5"
solana-program = "=1.18.17"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
